# django_softdelete

./: .gitignore  CHANGELOG.md  MANIFEST  MANIFEST.in  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
django_softdelete/: __about__.py  __init__.py  admin.py  apps.py  exceptions.py  filters.py  managers.py  models.py  services.py  signals.py
django_softdelete/templates/admin/: hard_delete_confirmation.html  restore_confirmation.html  soft_delete_confirmation.html
test_app/: admin.py  apps.py  models.py
test_app/management/commands/: populate.py
test_project/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_admin.py  test_models.py  test_templates.py
